--- a/src/input.css
+++ b/src/input.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 .navbar-fixed {
-  @apply fixed z-[9999] bg-white bg-opacity-50 dark:bg-dark dark:bg-opacity-50;
+  @apply fixed bg-white bg-opacity-50 dark:bg-dark dark:bg-opacity-50;
   backdrop-filter: blur(5px);
   box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.2);
 }
@@ -26,4 +26,13 @@
 
 #dark-toggle:checked ~ label div.toggle-circle {
   @apply translate-x-5;
+}
+
+@layer utilities {
+  .name {
+    @apply relative text-4xl font-black uppercase text-white dark:text-dark md:text-8xl;
+  }
+  .name::before {
+    @apply absolute top-0 left-0 h-[100%] w-0 animate-animate overflow-hidden border-r-4 border-sky text-sky content-['rzkyrmdnu'];
+  }
 }
